<resources>
    <string name="app_name">Правила страйкбола</string>
    <string name="action_settings">Настройки</string>
    <string name="accept_button">Далее</string>
    <string name="logout_button">Выйти из аккаунта</string>
    <string name="start_button">Начать тестирование</string>
    <string name="name_hint">Введите Ваш позывной</string>
    <string name="start_title">Правила страйкбола</string>
    <string name="start_title2">г. Норильска</string>
    <string name="test_result_title">Итоги тестирования</string>
    <string name="apply_button_text">Далее</string>
    <string name="start_over_button_text">Сначала</string>
    <string name="from_text"> вопроов из </string>
    <string name="question_from">Вопрос: %d из %d</string>
    <string name="result">%d из %d</string>
    <string name="hint_title">Подсказка</string>
    <string name="hint_text">Правильных вариантов ответа может быть несколько.</string>
    <string name="dismiss">Скрыть</string>
    <string name="logo_description">Изображение на главном экране</string>
    <string name="successful_exit">Вы успешно вышли из Google-аккаунта</string>
    <string name="need_auth">Необходимо авторизоваться</string>
    <string name="name">Имя</string>
    <string name="anonymous">Аноним</string>


</resources>
