<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:id="@+id/CoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="192dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"

            app:toolbarId="@+id/toolbar">

            <ImageView
                android:id="@+id/app_bar_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="Stikeball Rules"

                android:scaleType="centerCrop"
                android:src="@mipmap/logo"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:visibility="gone" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".MainActivity"
            tools:ignore="ExtraText"
            tools:showIn="@layout/activity_main">

            <Button
                android:id="@+id/startButton"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:background="@color/colorPrimary"
                android:onClick="startTest"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/start_button"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameText" />

            <Button
                android:id="@+id/logoutButton"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="96dp"
                android:layout_marginLeft="128dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="96dp"
                android:layout_marginRight="128dp"
                android:background="@color/colorPrimary"
                android:onClick="signOut"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/logout_button"
                android:textColor="@android:color/white"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/startButton" />

            <EditText
                android:id="@+id/nameText"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:hint="@string/name_hint"
                android:inputType="text"
                android:maxLength="25"
                app:layout_constraintBottom_toTopOf="@+id/startButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleText2" />

            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="64dp"
                android:layout_marginLeft="64dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="64dp"
                android:layout_marginRight="64dp"
                android:layout_marginBottom="8dp"
                android:shadowDy="2"
                android:text="@string/start_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@+id/titleText2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/titleText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginLeft="64dp"
                android:layout_marginEnd="64dp"
                android:layout_marginRight="64dp"
                android:text="@string/start_title2"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@+id/nameText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleText" />

            />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>