<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".TestingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarSize="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true">

            <androidx.cardview.widget.CardView
                android:id="@+id/hintCardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:visibility="gone"
                app:cardElevation="8dp"
                app:layout_constraintBottom_toTopOf="@+id/cardView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:srcCompat="@drawable/common_google_signin_btn_icon_light" />

                    <TextView
                        android:id="@+id/hintTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="2dp"
                        android:text="@string/hint_title"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/hintText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16sp"
                        android:layout_marginRight="16sp"
                        android:text="@string/hint_text"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/dismissButton"
                        android:layout_width="wrap_content"
                        android:layout_height="36dp"
                        android:layout_gravity="end"
                        android:layout_marginRight="8dp"
                        android:background="@color/fui_transparent"
                        android:onClick="dismissCardHint"
                        android:text="@string/dismiss"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:animateLayoutChanges="true"
                app:cardElevation="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hintCardView">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nameTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8sp"
                        android:layout_marginTop="8sp"
                        android:layout_marginRight="8sp" />

                    <TextView
                        android:id="@+id/questionText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8sp"
                        android:layout_marginRight="8sp"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textSize="18sp"
                        android:visibility="gone" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <View
                        android:id="@+id/divider"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="?android:attr/listDivider"
                        android:visibility="gone"
                        tools:visibility="visible" />

                    <RadioGroup
                        android:id="@+id/RadioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp">

                    </RadioGroup>

                    <Button
                        android:id="@+id/acceptButton"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        android:animateLayoutChanges="true"
                        android:background="@color/colorPrimary"
                        android:onClick="checkResult"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:text="@string/accept_button"
                        android:textColor="@android:color/white"
                        android:visibility="invisible" />

                </LinearLayout>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </ScrollView>

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>